--- a/index.html
+++ b/index.html
@@ -1,8 +1,81 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cake ID Scraper</title>
+    <link rel="shortcut icon" href="scraper.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+    <style type="text/css">
+      html,
+      body {
+        font-family: sans-serif;
+      }
+      p {
+        text-align: left;
+      }
+      .image > img {
+        padding: 5px;
+        border: 1px solid #ccc;
+      }
+      .navbar-item img {
+        max-height: 64px;
+        width: 64px;
+      }
+      .scraper {
+        height: 64px;
+        width: 64px;
+        vertical-align: bottom;
+      }
+      .hero-foot .subtitle {
+        margin-bottom: 0;
+      }
+    </style>
+  </head>
+
   <body>
-    </div>
-    <a style="border: 1px solid black; height: 100px; width: 100px; display: block;"href="javascript:(function(){(() => { const offerId = document.querySelector('.info').innerText.trim().replace(/ID/g, 'ca').replace(/\r?\n?/g, ''); const html = document.getElementById(offerId).innerHTML; try { window.open().document.write(` <!doctype html> <html> <head> <style> .x-grid3-td-132 { padding-bottom: 10px; } .x-grid3-scroller { resize: both; overflow: auto; border: 4px solid black; min-height: 100vh; min-width: 100%; } .x-grid3-cell-inner.x-grid3-col-132 { } .x-grid3-col-133, .x-grid3-td-134 { /*type and status columns e.g. link/email hidden/active*/ display: none; } .x-grid3-col-135 { /*url preview text*/ display: none; } .x-grid3-td-checker, .creative-preview { display: none; } .x-grid3-col-131 { display: none; } </style> <script> setTimeout(() => window.stop(), 10); setTimeout(() => { const scroller = document.querySelector('.x-grid3-scroller'); document.body.innerHTML = scroller.outerHTML; const creativeIds = Array.from(document.querySelectorAll('.x-grid3-col-132')); creativeIds.forEach(cur => cur.firstChild.onclick = null); creativeIds.forEach(cur => cur.addEventListener('click', e => { const textarea = document.createElement('textarea'); textarea.innerText = cur.firstChild.attributes.href.nodeValue.replace(/#/, '').replace(/cr/, ''); document.getElementsByClassName('x-grid3-scroller')[0].appendChild(textarea); textarea.select(); try { document.execCommand('copy'); } catch (err) { alert('Copy not supported' + err); } finally { document.getElementsByClassName('x-grid3-scroller')[0].removeChild(textarea); } })); }, 11); </script> </head> <body> ${html} </body> </html> `); } catch(e) { alert('Something went wrong! ' + e); } })();})();">Drag me!</a>
-    </div>
+    <section class="hero is-fullheight is-default is-bold">
+
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <div class="columns is-vcentered">
+            <div class="column is-2"></div>
+            <div class="column is-8">
+              <h1 class="title is-2">
+                <a href="https://getcake.com/">CAKE</a> Scraper
+                <img class="scraper" src="scraper.svg" alt="Logo">
+              </h1>
+              <hr>
+              <p>
+                In order to use this tool, make sure no more than 2 windows are actively being rendered on the page.
+                Only the <span class="tag is-light is-medium">Search Results for Query:</span> and the offer window queried may be displayed.
+                Once the offer window is displayed make sure you have clicked the <span class="tag is-light is-medium">Creatives</span> tab on the ID set you
+                are trying to scrape at least once.
+                To get started, drag the button below to your bookmarks toolbar. Anytime you need to insert creative
+                IDs into a creative, or just simply want an easier form of viewing creative IDs, just hit the button on
+                your bookmarks toolbar and a new tab will open. Here you can click on an ID and it will be copied to
+                your clipboard.
+              </p>
+              <br>
+              <h2 class="subtitle is-4">Drag the button below to your bookmarks toolbar.</h2>
+              <a class="button is-medium is-rounded is-info is-outlined" href="javascript:(function(){(() => { const offerId = document.querySelector('.info').innerText.trim().replace(/ID/g, 'ca').replace(/\r?\n?/g, ''); const title = `CAKE Creative IDs For Offer ${offerId.replace(/ca/, '')}`; const html = document.getElementById(offerId).innerHTML; try { window.open().document.write(` <!doctype html> <html> <head> <title>${title}</title> <style> html { font-family: sans-serif; background-color: #f9f9f9; } a { color: #016F8E; text-decoration: none; } a:hover { text-decoration: underline; } .x-grid3-scroller { resize: both; overflow: auto; border: 2px solid #000; border-radius: 5px; min-height: 100vh; min-width: 100%; } .x-grid3-td-checker, .creative-preview { display: none; } .copyMsg { border-radius: 6px; z-index: 1; color: #fff; text-align: center; padding: 5px 0; font-size: 13px; } </style> </head> <body> ${html} <script> const scroller = document.querySelector('.x-grid3-scroller'); document.body.innerHTML = ''; document.body.innerHTML = scroller.outerHTML; const initialClassName = document.getElementsByTagName('td')[1] .className.trim().split(' ').pop(); Array.from(document.querySelectorAll('.' + initialClassName)) .forEach(i => i.style.display = 'none'); const initialClassNameNumber = initialClassName.split()[0] .split('-', 3).join('-').length + 1; const creativeIdClass = Number(initialClassName.split()[0] .substring(initialClassNameNumber, initialClassName.split()[0].length)) + 1; const creativeIds = Array.from(document.querySelectorAll('.x-grid3-col-' + creativeIdClass)); creativeIds.forEach(cur => { cur.firstChild.onclick = null; cur.style.padding = '10px'; cur.firstChild.addEventListener('mouseenter', e => { e.target.style.fontSize = '17px'; }); cur.firstChild.addEventListener('mouseleave', e => { e.target.style.fontSize = '16px'; }); cur.firstChild.addEventListener('click', e => { const div = document.createElement('div'); div.classList.add('copyMsg'); div.style.position = 'absolute'; div.innerText = 'COPIED'; div.style.width = '120px'; div.style.height = '20px'; div.style.borderBottom = '1px dotted black'; div.style.background = 'rgba(1,1,1,0.5)'; div.style.right = e.clientX  + 'px'; div.style.left = e.clientX + 'px'; div.style.top = e.clientY + 'px'; div.style.bottom = e.clientY + 'px'; document.body.appendChild(div); setTimeout(() => { document.body.removeChild(div); }, 500); }); }); const linkOverridesClassNumber = creativeIdClass + 3; const linkOverrides = Array.from(document.querySelectorAll('.x-grid3-td-' + linkOverridesClassNumber)); linkOverrides.forEach(cur => cur.style.display = 'none'); creativeIds.forEach(cur => cur.addEventListener('click', e => { const textarea = document.createElement('textarea'); textarea.innerText = cur.firstChild.attributes.href.nodeValue.replace(/#/, '').replace(/cr/, ''); document.getElementsByClassName('x-grid3-scroller')[0].appendChild(textarea); textarea.select(); try { document.execCommand('copy'); } catch (err) { alert('Copy not supported' + err); } finally { document.getElementsByClassName('x-grid3-scroller')[0].removeChild(textarea); } })); window.stop(); </script> </body> </html> `); } catch(e) { alert('Something went wrong! ' + e); } })();})();">CAKE Scraper</a>
+            </div>
+            <div class="column is-3"></div>
+          </div>
+        </div>
+      </div>
+      <div class="hero-foot">
+        <h3 class="subtitle is-4 has-text-centered">Other tools</h3>
+        <div class="container">
+          <div class="tabs is-centered">
+            <ul>
+              <li><a href="https://joseamarin.github.io/mtscraper/">MT Scraper</a></li>
+              <li><a href="https://joseamarin.github.io/character-converter/">Character Converter</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
